# geo-deep-learning

./: .gitignore  Dockerfile  GDL.py  docker-compose.yaml  environment.yml  pyproject.toml  requirements.in  requirements.txt  tiling_segmentation.py  train_segmentation.py
config/: gdl_config_template.yaml
config/dataset/: rcm_pre_post_change_dataset.yaml
config/loss/binary/: dice_softbce.yaml
config/model/: change_former.yaml
configs/: bkp_rcm_change_detection.yaml  dofa_config.yaml  dofa_config_rgbn.yaml  rcm_change_detection.yaml  seg_former_rcm_change_detection.yaml  seg_former_rcm_change_detection_dyn_trans.yaml
dataset/: create_dataset.py  pre_post_change_dataset.py  rcm_create_dataloader.py
geo_deep_learning/: train.py
geo_deep_learning/datamodules/: rcm_change_detection_datamodule.py  rcm_change_detection_one_output_datamodule.py  wds_datamodule.py
geo_deep_learning/datasets/: change_detection_dataset.py  csv_dataset.py  rcm_change_detection_dataset.py  rcm_change_detection_dataset_one_output.py  wds_dataset.py
geo_deep_learning/loss/: dice_bce_loss.py
geo_deep_learning/models/: __init__.py  utils.py
geo_deep_learning/models/change_detection/: change_detection_model.py
geo_deep_learning/models/change_detection/sub_models/: mamba.py  pv2_change_detection.py
geo_deep_learning/models/change_detection/sub_models/changeformer/: original_change_former.py  original_change_former_base_network.py
geo_deep_learning/models/decoders/: segformer_mlp.py
geo_deep_learning/models/decoders/mask2former/: __init__.py  config.py  mask2former.py  pixel_decoder.py  transformer_decoder.py  utils.py
geo_deep_learning/models/dofa/: dofa.yaml
geo_deep_learning/models/encoders/: dino_v3.py  dinov3_layers.py  mix_transformer.py
geo_deep_learning/models/heads/: fcn_head.py  segmentation_head.py
geo_deep_learning/models/segmentation/: dinov3.py  dofa.py  segformer.py
geo_deep_learning/tasks_with_models/: change_detection_changeformer.py  change_detection_segformer.py  segmentation_dinov3.py  segmentation_dofa.py  segmentation_segformer.py  segmentation_unetplus.py
geo_deep_learning/tools/: mlflow_logger.py  target_converters.py  utils.py
geo_deep_learning/tools/callbacks/: segmentation_callback.py
geo_deep_learning/tools/losses/: __init__.py  loss_utils.py  mask2former_criterion.py  matcher.py
geo_deep_learning/utils/: calculate_min_max_from_csv.py  rasters.py
models/: mamba.py  model_choice.py
models/changeformer/: original_change_former.py
tests/: test_utils_raster.py
utils/: geoutils.py  script_model.py  visualization.py
